# LinearElasticitySolver

./: CMakeLists.txt  README.md
Common_Libraries/: CMakeLists.txt
Common_Libraries/SPGrid/Core/: SPGrid_Blocks.h  SPGrid_Mask.h
Common_Libraries/SPGrid/Tools/: SPGrid_Masked_Average_Offset_Grid.h
Public_Library/PhysBAM_Tools/: CMakeLists.txt
Public_Library/PhysBAM_Tools/Krylov_Solvers/: CONJUGATE_GRADIENT.cpp  CONJUGATE_GRADIENT.cpp~  KRYLOV_SOLVER.h  KRYLOV_SYSTEM_BASE.cpp  KRYLOV_SYSTEM_BASE.cpp~  KRYLOV_VECTOR_BASE.cpp  KRYLOV_VECTOR_BASE.h
Solver/CUDA_Solver/: ADAPTIVE_PROGRESS_INDICATOR.h  CG_SYSTEM.cpp  CG_SYSTEM.h  CG_VECTOR.cpp  CG_VECTOR.h  CMakeLists.txt  ELASTICITY_FLAGS.h  ELASTICITY_STRUCT.h  File_Parser.h  HIERARCHICAL_RANGE_ITERATOR.h  SPGrid_Linear_Elasticity.h  Write_SPGrid_To_Point_Cloud.h
Solver/CUDA_Solver/CUDA_Kernels/: CG_SOLVER_CUDA.h  CG_SYSTEM_CUDA.cpp  CG_SYSTEM_CUDA.h  CG_VECTOR_ADD_CUDA.cu  CG_VECTOR_ADD_CUDA.h  CG_VECTOR_CUDA.cpp  CG_VECTOR_CUDA.h  CMakeLists.txt  Clear_CUDA.cu  Clear_CUDA.h  Inner_Product_CUDA.cu  Inner_Product_CUDA.h  Linear_Elasticity_CUDA.cu  Linear_Elasticity_CUDA.h  Linear_Elasticity_CUDA_Optimized.cu  Linear_Elasticity_CUDA_Optimized.h  Norm_Helper_CUDA.cu  Norm_Helper_CUDA.h  Project_CUDA.cu  Project_CUDA.h  SPGrid_Master_Array_Linearizer.h
Solver/CUDA_Solver/elasticity_CUDA_3D/: CMakeLists.txt  main.cpp
